--- a/app/css/components/mentor/representer-row.css
+++ b/app/css/components/mentor/representer-row.css
@@ -63,18 +63,15 @@
         }
         & time,
         .--occurencies {
-            @apply font-medium text-14 text-textColor6 leading-code;
+            @apply font-medium text-14 text-textColor6 leading-code mr-32;
             @apply text-right;
             width: 140px;
-        }
-        & time {
-            @apply ml-32;
         }
 
         & .--feedback-glimpse {
             @apply text-right mr-60 leading-150 text-textColor6;
             @apply truncate;
-            width: 400px;
+            width: 300px;
         }
 
         & .action-icon {
