Add explore concept button

--- a/app/css/ui-kit/buttons.css
+++ b/app/css/ui-kit/buttons.css
@@ -72,7 +72,7 @@
     .btn-secondary {
         @apply btn-i-filled;
         color: var(--colorPurpleToBrightPurple);
-        @apply bg-backgroundColorF;
+        background: var(--backgroundColorBtnSecondary);
 
         @apply border-1;
         border-color: var(--colorPurpleToBrightPurple);
