--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -189,6 +189,7 @@
     --backgroundColorImpactPage: theme(colors.white);
     --backgroundColorNotificationsUnreadDot: theme(colors.lightBlue);
     --backgroundColorBuildToolingStatus: white;
+    --backgroundColorBtnSecondary: theme(colors.lightPurple);
     --backgroundColorBtnSecondaryHover: theme(colors.lightPurpleDarkened);
     --backgroundColorMentorTestimonialsNew: theme(colors.lightGold);
     --backgroundColorExternalCTA: theme(colors.randomBlue);
@@ -410,7 +411,7 @@ body.namespace-.controller-premium.theme-light,
     --backgroundColorC: var(--c-302B42);
     --backgroundColorD: var(--c-3A3557); /* Confirmed */
     --backgroundColorE: theme(colors.englishViolet);
-    --backgroundColorF: var(--c-191525);
+    --backgroundColorF: theme(colors.eerieBlack);
     --backgroundColorG: var(--c-2F2943);
     --backgroundColorH: var(--c-F0F3F9);
     --backgroundColorI: var(--c-191525);
@@ -448,7 +449,8 @@ body.namespace-.controller-premium.theme-light,
     --backgroundColorImpactPage: theme(colors.eerieBlack);
     --backgroundColorNotificationsUnreadDot: theme(colors.seafoamGreen);
     --backgroundColorBuildToolingStatus: none;
-    --backgroundColorBtnSecondaryHover: theme(colors.russianViolet);
+    --backgroundColorBtnSecondary: theme(colors.russianViolet);
+    --backgroundColorBtnSecondaryHover: theme(colors.eerieBlack);
     --backgroundColorMentorTestimonialsNew: theme(colors.launchingYellow);
     --backgroundColorExternalCTA: none;
     --backgroundColorEasyTag: none;
