--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -178,6 +178,7 @@
 @import "./dropdowns/request-mentoring";
 @import "./dropdowns/open-editor-button";
 
+@import "./pages/partners";
 @import "./pages/partners/gdn";
 @import "./pages/about";
 @import "./pages/insiders";
