--- a/app/views/layouts/nav/challenge_12in23.html.haml
+++ b/app/views/layouts/nav/challenge_12in23.html.haml
@@ -5,7 +5,7 @@
     Try out 12 different programming languages in 2023, curated and guided by us!
   %p.text-p-base.mb-16
     This month is the Summer of Sexps,
-    exploring languages that are Lisp dialects: Clojure, Common Lisp, Emacs Lisp, Racket and Scheme.
+    exploring Lisp dialects: Clojure, Common Lisp, Emacs Lisp, Racket and Scheme.
 
   = link_to "Explore #12in23", challenge_path("12in23"), class: 'btn-primary btn-s mb-12'
 
