Add Jurassic July content

--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -5,14 +5,14 @@
         .mr-auto{ class: 'max-w-[860px]' }
           .font-semibold.leading-150.flex.items-center.mb-4{ style: 'color: var(--colorPurpleToBrightPurple)' }
             %span.emoji.mr-6 📆
-            Month 6 of #12in23
-          %h1.text-h1.mb-8 It's the Summer of Sexps! ✨
+            Month 7 of #12in23
+          %h1.text-h1.mb-8 It's Jurassic July! ✨
           %p.text-p-xlarge.mb-20
-            This month for #12in23 we're exploring languages that are Lisp dialects. We're digging into Clojure, Common Lisp, Emacs Lisp, Racket and Scheme, with interviews and live streaming, exclusive swag and lots of fun exercises for you to complete!
+            This month for #12in23 we're exploring established languages that have been incredibly successful. We're digging into C, C++, COBOL, Fortran and Visual Basic, with interviews and live streaming, exclusive swag and lots of fun exercises for you to complete!
 
           .shadow-baseZ1.grid.grid-cols-2.gap-20.py-20.px-20.rounded-8.bg-backgroundColorB
             .flex-shrink
-              %h2.text-h4.mb-2 Start by watching our Summer of Sexps overview video  👉
+              %h2.text-h4.mb-2 Start by watching our Jurassic July overview video  👉
               %p.text-p-base.mb-8
                 Our introductory video gives a quick overview to the month, explores how these languages are different, looks at where they're useful, and finally gives a quick comparison between the featured languages this month.
               %p.text-p-base
@@ -25,12 +25,12 @@
 
           %h2.text-h3.mt-32.mb-2 Learn and Earn (the badge)!
           %p.text-p-large.mb-20
-            Earn the Summer of Sexps badge for completing and publishing 5 exercises in one of the following languages.
+            Earn the Jurassic July badge for completing and publishing 5 exercises in one of the following languages.
             Consider starting with a language with a syllabus (
             = graphical_icon "concepts", css_class: 'w-[14px] h-[14px] filter-purple inline mx-[-4px]'
             ).
 
-          - tracks = Track.where(slug: %w[clojure common-lisp emacs-lisp racket scheme])
+          - tracks = Track.where(slug: %w[c cpp cobol fortran vbnet])
           .grid.grid-cols-8.gap-12.mb-32
             - tracks.each do |track|
               = link_to track, class: 'rounded-12 shadow-base hover:shadow-baseZ1 bg-backgroundColorA flex flex-col p-12 text-center relative' do
@@ -41,28 +41,28 @@
                 .text-h6= track.title
 
           %p.text-p-large.mb-12
-            You can solve any exercises in these tracks to get the badge, but we recommend the following as interesting challenges to approach in Lisp languages:
+            You can solve any exercises in these tracks to get the badge, but we recommend the following as interesting challenges to approach in these languages:
           %ul.text-p-large.mb-12
             %li.mb-2
-              = image_tag "#{Exercism.config.website_icons_host}/exercises/leap.svg", class: "w-[25px] inline"
-              %strong.font-semibold Leap:
-              Work with boolean conditions and truthiness (and optionally, lexical scoping)
+              = image_tag "#{Exercism.config.website_icons_host}/exercises/bob.svg", class: "w-[25px] inline"
+              %strong.font-semibold Bob:
+              Work with strings and conditional logic
             %li.mb-2
-              = image_tag "#{Exercism.config.website_icons_host}/exercises/two-fer.svg", class: "w-[25px] inline"
-              %strong.font-semibold Two-Fer:
-              Format a string and work with an optional parameter
+              = image_tag "#{Exercism.config.website_icons_host}/exercises/allergies.svg", class: "w-[25px] inline"
+              %strong.font-semibold Allergies:
+              Work with strings, numbers and bitwise operations
             %li.mb-2
-              = image_tag "#{Exercism.config.website_icons_host}/exercises/difference-of-squares.svg", class: "w-[25px] inline"
-              %strong.font-semibold Difference of Squares:
-              Call user-defined functions and do math in prefix notation
+              = image_tag "#{Exercism.config.website_icons_host}/exercises/reverse-string.svg", class: "w-[25px] inline"
+              %strong.font-semibold Reverse String:
+              Iterate over the characters in a string
             %li.mb-2
-              = image_tag "#{Exercism.config.website_icons_host}/exercises/robot-name.svg", class: "w-[25px] inline"
-              %strong.font-semibold Robot Name:
-              Work with randomness, atoms, and structured data
+              = image_tag "#{Exercism.config.website_icons_host}/exercises/high-scores.svg", class: "w-[25px] inline"
+              %strong.font-semibold High Scores:
+              Iterate over arrays of numbers
             %li.mb-2
-              = image_tag "#{Exercism.config.website_icons_host}/exercises/matching-brackets.svg", class: "w-[25px] inline"
-              %strong.font-semibold Matching Brackets:
-              Use recursion to process a string
+              = image_tag "#{Exercism.config.website_icons_host}/exercises/armstrong-numbers.svg", class: "w-[25px] inline"
+              %strong.font-semibold Armstrong Numbers:
+              Work with numbers and looping/iteration
 
           %h2.text-h3.mt-32.mb-4 Learn from others… 🎥
           %p.text-p-large.mb-12
@@ -88,9 +88,9 @@
               %strong.font-semibold #12in23
               hashtag around social media!
             %li.mb-4
-              We have exclusive Summer of Sexps swag that will only be available later in the month. Keep an eye on the
+              We have exclusive Jurassic July swag that will only be available later in the month. Keep an eye on the
               = link_to "swag store", "https://swag.exercism.org"
-              for details (and check out the Mindshifting May swag before it goes too!)
+              for details (and check out the Summer of Sexps swag before it goes too!)
 
         .ml-80{ class: 'max-w-[450px]' }
           .bg-backgroundColorD.rounded-8.py-16.px-24.mb-24.border-1.border-borderColor7
