--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -89,11 +89,11 @@
         .flex.flex-col.items-start.mb-28
           .text-adaptivePurple.font-semibold.leading-150.flex.items-center.mb-4
             %span.emoji.mr-6 📆
-            Month 6 of #12in23
-          %h2.text-h3 It's the Summer of Sexps!
+            Month 7 of #12in23
+          %h2.text-h3 It's Jurassic July
           %p.text-p-base.mb-6
-            This month we're exploring languages that are Lisp dialects: Clojure, Common Lisp, Emacs Lisp, Racket and Scheme!
-            Have fun expanding your mind!
+            This month we're exploring established languages that have been incredibly successful: C, C++, COBOL, Fortran and Visual Basic!
+            Have fun!
           = link_to challenge_path('12in23'), class: "btn btn-primary btn-base" do
             %span Explore #12in23
             = graphical_icon "arrow-right"
