--- a/app/views/layouts/nav/challenge_12in23.html.haml
+++ b/app/views/layouts/nav/challenge_12in23.html.haml
@@ -4,8 +4,8 @@
   %p.text-p-base.font-semibold.mb-8
     Try out 12 different programming languages in 2023, curated and guided by us!
   %p.text-p-base.mb-16
-    This month is the Summer of Sexps,
-    exploring Lisp dialects: Clojure, Common Lisp, Emacs Lisp, Racket and Scheme.
+    This month is Jurassic July,
+    exploring some established and wildly successful languages: C, C++, COBOL, Fortran and Visual Basic.
 
   = link_to "Explore #12in23", challenge_path("12in23"), class: 'btn-primary btn-s mb-12'
 
