--- a/app/views/premium/paypal_cancelled.haml
+++ b/app/views/premium/paypal_cancelled.haml
@@ -1,9 +1,8 @@
 #page-premium
-  .flex.flex-col.items-center.pb-40{ class: 'min-h-[50vh]' }
+  .flex.flex-col.items-center.pt-40.pb-40{ class: 'min-h-[50vh]' }
     = graphical_icon "premium", css_class: 'h-[64px] w-[64px] mb-8'
-    %h1.text-h1.flex.items-center.mb-20 Exercism Premium
+    %h1.text-h1.flex.items-center.mb-8 Exercism Premium
 
-    %p.text-p-large.mb-12 TODO: update copy
-    = graphical_icon "spinner", css_class: 'filter-textColor6 h-[64px] w-[64px] animate-spin-slow'
+    %p.text-p-large.mb-16 Your Paypal payment was cancelled. Please try again.
+    = link_to "Return to Premium", premium_path, class: 'btn-l btn-primary'
 
-    = render ReactComponents::Premium::PaypalStatus.new
