--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -66,7 +66,7 @@
 
     <!-- Some preview text. -->
     <div style="display: none; max-height: 0; overflow: hidden;">
-      <%= @title %>
+      <%= @preview_text %>
     </div>
     <!-- Get rid of unwanted preview text. -->
     <div style="display: none; max-height: 0px; overflow: hidden;">
