Add initial advert and rename supporting-orgs to partners

--- a/app/views/about/partners/index.html.haml
+++ b/app/views/about/partners/index.html.haml
@@ -66,11 +66,11 @@
       %hr.c-divider.mt-20.mb-32
 
       .grid.grid-cols-1.md:grid-cols-2.gap-24
-        - @supporting_orgs.each do |org|
+        - @partners.each do |org|
           .supporter
             = icon org.slug, org.name, category: :partners, css_class: "logo #{org.slug}"
             %p= org.support_explanation
-            = render ViewComponents::ProminentLink.new("Learn more", Exercism::Routes.about_supporting_organisation_path(org.slug))
+            = render ViewComponents::ProminentLink.new("Learn more", Exercism::Routes.about_partner_path(org.slug))
         .supporter
           = icon "chicago", "University of Chicago", category: :partners, css_class: "logo chicago"
           %p
