--- a/app/views/premium/external.html.haml
+++ b/app/views/premium/external.html.haml
@@ -1,11 +1,11 @@
 #page-premium
-  .gradient-container.top.pt-20.md:pt-48.md:pb-64.pb-0
+  .gradient-container.top.md:py-64.py-24
     .lg-container
       .grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
         .top-lhs.flex.flex-col
-          %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
+          %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-32
             Exercism Premium
-          %h3.text-h3.mb-16 Supercharge your Exercism Experience!
+          %h3.text-h3.sm:mb-16.mb-24 Supercharge your Exercism Experience!
           %h5.launching.rounded-8 Only $9.99/month
           %p.text-p-xlarge.mb-8{ class: "max-w-[600px]" }
             Enhance your learning journey with Exercism Premium!
@@ -26,7 +26,7 @@
             %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/4chNHw9i6Og", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
   #features-section
-  .gradient-container.py-64
+  .gradient-container.md:py-64.py-24
     .lg-container
       %h2.text-h2.mb-32 Exclusive Premium Features
       .features.mb-32
@@ -39,7 +39,7 @@
       %p.text-p-large.text-center (And even more coming soon!)
 
   #pricing-section
-  .gradient-container.text-center.py-64
+  .gradient-container.text-center.md:py-64.py-24
     .lg-container.flex.flex-col
       %h2.text-h1.mb-8.relative Choose Your Subscription
       %p.text-p-xlarge.mb-16.relative Subscribe monthly, annually, or forever!
