--- a/app/views/admin/partners/index.html.haml
+++ b/app/views/admin/partners/index.html.haml
@@ -1,7 +1,7 @@
-.c-admin-index
+.c-admin-page
   .lg-container
     %h1.text-h1.mb-8 Partners
-    %table.mb-20
+    %table.mb-20.c-admin-table
       %tr
         %th Partner
         %th{ colspan: 2 }
