--- a/app/views/admin/partners/show.html.haml
+++ b/app/views/admin/partners/show.html.haml
@@ -47,6 +47,6 @@
 
     %hr.my-32.border-borderColor5
 
-    .flex.mt-32
+    .flex.gap-16.mt-32
       = link_to "Edit this partner", edit_admin_partner_path(@partner), class: 'btn btn-standard btn-base'
       = link_to "Back to partners", admin_partners_path, class: 'btn btn-standard btn-base'
