Add `c-highlight-links` css class, highlight some stuff with it

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -250,3 +250,4 @@
 /* @import "./highlighters/highlightjs-light";
 @import "./highlighters/highlightjs-dark"; */
 @import "./highlighters/highlightjs-colors";
+@import "./highlighters/highlight-links";
