--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -65,7 +65,7 @@
               Use recursion to process a string
 
           %h2.text-h3.mt-32.mb-4 Learn from others… 🎥
-          %p.text-p-large.mb-12
+          %p.text-p-large.mb-12.c-highlight-links
             Throughout the month we'll have interviews, walkthroughs from Exercism track contributors, and live streams of the community solving exercises. Our streaming team is really growing so definitely check out what's on!
             Subscribe to our
             = link_to "Twitch Channel", 'https://twitch.tv/exercismlive', class: 'underline'
@@ -75,7 +75,7 @@
             There's also a schedule at the top right of this page.
 
           %h2.text-h3.mt-32.mb-4 Join the conversation… 💬
-          %ul.text-p-large.list-disc.pl-16
+          %ul.text-p-large.list-disc.pl-16.c-highlight-links
             %li.mb-4
               Help us compile the
               = link_to "definitive list of great resources", "https://forum.exercism.org/t/the-definitive-guide-to-learning-lispy-languages-those-with-s-expressions/5907"
@@ -95,7 +95,7 @@
         .ml-80{ class: 'max-w-[450px]' }
           .bg-backgroundColorD.rounded-8.py-16.px-24.mb-24.border-1.border-borderColor7
             %h2.text-h4.mb-4 Upcoming Streaming Schedule
-            %p.text-p-base.mb-12
+            %p.text-p-base.mb-12.c-highlight-links
               This schedule is regularly updated. All events will stream on our
               = link_to "Twitch Channel", 'https://twitch.tv/exercismlive', class: 'underline'
               \- subscribe so not to miss out!
