--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -28,7 +28,6 @@ body.keyboard-navigation .nav-element:hover .arrow {
     @apply z-menu;
 
     & .announcement-bar {
-        @apply block;
         @apply py-8;
         @apply text-aliceBlue font-semibold text-16 leading-160 text-center;
         background: var(--backgroundColorAnnouncementBar);
@@ -38,7 +37,7 @@ body.keyboard-navigation .nav-element:hover .arrow {
         }
 
         .lg-container {
-            @apply flex justify-center items-center;
+            @apply flex md:flex-row flex-col justify-center items-center;
             .text-container {
                 @apply sm:flex flex-row;
             }
