--- a/app/css/components/about-nav.css
+++ b/app/css/components/about-nav.css
@@ -11,14 +11,10 @@
     }
 
     & ul {
-        @apply flex;
+        @apply flex gap-32 md:gap-[40px] scroll-x-hidden;
     }
     & li {
-        @apply mr-40;
-        @apply border-b-3 border-transparent;
-        &:last-child {
-            @apply mr-0;
-        }
+        @apply border-b-3 border-transparent whitespace-nowrap;
         & a {
             @apply text-16 leading-200 text-textColor6 font-medium;
             @apply block mt-8 mb-8;
