Change breakpoints, improve cards with buttons

--- a/app/views/premium/external.html.haml
+++ b/app/views/premium/external.html.haml
@@ -44,7 +44,7 @@
       %h2.text-h2.mb-8.relative Choose Your Subscription
       %p.text-p-xlarge.mb-16.relative Subscribe monthly, annually, or forever!
 
-      .grid.lg:grid-cols-3.sm:grid-cols-2.grid-cols-1.gap-32.justify-center.my-32
+      .grid.xl:grid-cols-3.md:grid-cols-2.grid-cols-1.gap-32.justify-center.my-32
         .price-card.border-purpleDarker3
           %h2.text-h2 Monthly
           .price $9.99/month
