--- a/app/css/pages/premium.css
+++ b/app/css/pages/premium.css
@@ -28,7 +28,7 @@
     }
 
     .features {
-        @apply grid lg:grid-cols-3 grid-cols-1 gap-24;
+        @apply grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-24;
         .feature {
             .c-icon {
                 height: 45px;
