--- a/app/css/pages/impact.css
+++ b/app/css/pages/impact.css
@@ -20,36 +20,14 @@
 }
 
 #impact-page {
-    .theme-light,
-    .theme-accessibility-dark {
-        --headerBackground: linear-gradient(
-                180deg,
-                rgba(251, 251, 255, 0) 79.36%,
-                #f4f4fd 100%
-            ),
-            linear-gradient(
-                180deg,
-                #fafaff 0%,
-                rgba(250, 250, 255, 0.677852) 24.48%,
-                rgba(250, 250, 255, 0) 77.6%,
-                #fafaff 100%
-            ),
-            url("bg-tracks-header@2x.jpg"), #fafaff;
-    }
-
-    .theme-dark {
-        --headerBackground: #191525;
-    }
-
     background: var(--backgroundColorImpactPage);
 
     header {
         width: 100%;
-        height: 501px;
         left: 0px;
         top: 64px;
 
-        background: var(--headerBackground);
+        background: var(--backgroundImpactPageHeader);
         background-size: 100%;
     }
     .map-point {
