--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -49,7 +49,7 @@
           = render "alternatives"
 
       - else
-        %section.form-section.flex-shrink-0{ style: 'width:500px' }
+        %section.form-section.flex-shrink-0{ class: 'md:w-[500px] w-full' }
           .c-donations-form.p-32.text-center
             %h2.text-h4.mb-8 Please log in to donate using a debit/credit card.
             %p.text-p-base
@@ -69,18 +69,18 @@
             %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/f3EMJpVo568", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
         %h2.text-h2.mb-32 Here&apos;s what you can do to support us.
-        .flex.flex-row.shadow-baseZ1.p-24.rounded-16.bg-backgroundColorA.mb-16.border-2.border-gradient.relative
-          = graphical_icon "money-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
+        .flex.md:flex-row.flex-col.gap-20.shadow-baseZ1.p-24.rounded-16.bg-backgroundColorA.mb-16.border-2.border-gradient.relative
+          = graphical_icon "money-contribution", category: :graphics, css_class: "h-[96px] w-[96px]"
           .flex.flex-col
             .text-h4.mb-4 Donate
-            .text-prose.text-textColor5{ class: 'mr-[40px]' }
+            .text-prose.text-textColor5
               Support us financially using the donation box
               %span.hidden.md:inline to the right.
               %span.inline.md:hidden above.
               Every dollar helps us keep us independent, advert-free and able to grow, so please support us if you can! 💜
 
-        .flex.flex-row.shadow-base.p-24.rounded-16.bg-backgroundColorA.mb-16
-          = graphical_icon "organisation-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
+        .flex.md:flex-row.flex-col.gap-20.shadow-base.p-24.rounded-16.bg-backgroundColorA.mb-16
+          = graphical_icon "organisation-contribution", category: :graphics, css_class: "h-[96px] w-[96px]"
           .flex.flex-col
             .text-h4.mb-4 Get your company involved
             .text-prose.text-textColor5
@@ -89,8 +89,8 @@
               = link_to "fundraising@exercism.org", "mailto:fundraising@exercism.org", class: "text-prominentLinkColor font-medium underline"
               and we'll explore further!
 
-        .flex.flex-row.shadow-base.p-24.rounded-16.bg-backgroundColorA.mb-16
-          = graphical_icon "social-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
+        .flex.md:flex-row.flex-col.gap-20.shadow-base.p-24.rounded-16.bg-backgroundColorA.mb-16
+          = graphical_icon "social-contribution", category: :graphics, css_class: "h-[96px] w-[96px]"
           .flex.flex-col
             .text-h4.mb-4 Love Exercism? Tell others about us!
             .text-prose.text-textColor5
