--- a/app/css/ui-kit/scroll.css
+++ b/app/css/ui-kit/scroll.css
@@ -14,6 +14,6 @@
             white 90%,
             transparent
         );
-        padding-right: 10%;
+        @apply pl-20 pr-[10%];
     }
 }
