--- a/app/css/pages/profile-contributions.css
+++ b/app/css/pages/profile-contributions.css
@@ -78,12 +78,23 @@
         }
         & .authoring {
             & .exercises {
-                @apply grid grid-cols-2 gap-x-16 gap-y-16;
+                @apply grid md:grid-cols-2 grid-cols-1 gap-x-16 gap-y-16;
             }
 
             & .c-exercise-widget {
                 @apply py-16 px-24 w-100;
                 height: 100%;
+                @apply flex-col sm:flex-row;
+
+                .c-exercise-icon {
+                    @apply mr-0 mb-16 sm:mr-16 sm:mb-0;
+                }
+
+                .--track {
+                    .--track-title {
+                        @apply sm:block hidden;
+                    }
+                }
 
                 & .c-exercise-status-tag {
                     display: none;
