--- a/app/css/components/introducer.css
+++ b/app/css/components/introducer.css
@@ -7,7 +7,7 @@
         margin 0.2s ease-in, opacity 0.15s ease-in;
     overflow: hidden;
 
-    @apply md:min-h-[130px] md:max-h-[160px];
+    @apply lg:min-h-[130px] lg:max-h-[160px];
     @apply mt-8 mb-40;
 
     &.hidden {
@@ -27,8 +27,8 @@
 .c-introducer {
     @apply bg-randomBlue border-2 border-gradient rounded-12;
     @apply shadow-baseZ1;
-    @apply px-20 md:px-48 py-16 md:py-12;
-    @apply md:flex flex-row items-center;
+    @apply px-20 lg:px-48 py-16 lg:py-12;
+    @apply lg:flex flex-row items-center;
 
     &.hidden {
         display: none;
@@ -38,7 +38,7 @@
         @apply py-16 px-24;
 
         & .visual-icon {
-            @apply h-[20px] md:h-[48px] w-[20px] md:w-[48px];
+            @apply h-[20px] lg:h-[48px] w-[20px] lg:w-[48px];
             @apply mr-24;
         }
         & .info {
@@ -61,9 +61,9 @@
     }
 
     & .visual-icon {
-        @apply h-[48px] md:h-[102px] w-[48px] md:w-[102px];
-        @apply mb-8 ml-32 md:mb-0 md:ml-0 md:mr-32;
-        @apply float-right md:float-none;
+        @apply h-[48px] lg:h-[102px] w-[48px] lg:w-[102px];
+        @apply mb-8 ml-32 lg:mb-0 lg:ml-0 lg:mr-32;
+        @apply float-right lg:float-none;
     }
     & .info {
         & h2,
@@ -72,8 +72,8 @@
         }
         & p {
             @apply text-p-base;
-            @apply md:max-w-[680px];
-            @apply mb-8 md:mb-0;
+            @apply lg:max-w-[680px];
+            @apply mb-8 lg:mb-0;
 
             & a {
                 @apply text-prominentLinkColor font-medium;
@@ -81,8 +81,8 @@
         }
     }
     & .close {
-        @apply md:ml-auto md:flex-shrink-0 md:p-12;
-        /* filter: var(--textColor6-filter); */
+        @apply lg:ml-auto lg:flex-shrink-0 lg:p-12;
+        @apply lg:filter-textColor6;
         & .c-icon {
             width: 24px;
             height: 24px;
