--- a/app/css/pages/profile.css
+++ b/app/css/pages/profile.css
@@ -117,10 +117,29 @@
                 }
 
                 & .testimonial {
-                    max-width: 840px;
+                    @apply lg:max-w-[840px] max-w-[720px];
+                    @apply md:h-[unset] h-[150px] md:mb-16;
                     @apply mx-auto text-center;
-
-                    @apply text-21 leading-170 mb-16;
+                    @apply text-21 leading-170;
+                    -webkit-mask-image: linear-gradient(
+                        to bottom,
+                        white,
+                        transparent 110%
+                    );
+                    mask-image: linear-gradient(
+                        to bottom,
+                        white,
+                        transparent 110%
+                    );
+                }
+                @screen md {
+                    .testimonial {
+                        -webkit-mask-image: none;
+                        mask-image: none;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
                 }
                 & .stars {
                     @apply flex mb-40;
@@ -132,10 +151,9 @@
                 }
 
                 & .bylines {
-                    @apply flex items-center mb-48;
-
+                    @apply flex lg:flex-row flex-col gap-32 items-center mb-48;
                     & .byline {
-                        @apply rounded-8 py-16 px-32 mx-16;
+                        @apply rounded-8 py-16 px-32 w-100;
                         @apply flex items-center;
                         @apply text-left;
 
