--- a/app/css/ui-kit/scroll.css
+++ b/app/css/ui-kit/scroll.css
@@ -7,6 +7,13 @@
         &::-webkit-scrollbar {
             display: none; /* Chrome, Opera, Safari */
         }
+        -webkit-mask-image: linear-gradient(
+            to right,
+            transparent,
+            white 20px,
+            white 90%,
+            transparent
+        );
         mask-image: linear-gradient(
             to right,
             transparent,
@@ -15,5 +22,12 @@
             transparent
         );
         @apply pl-20 pr-[10%];
+    }
+
+    @screen md {
+        .scroll-x-hidden {
+            -webkit-mask-image: none;
+            mask-image: none;
+        }
     }
 }
